--- a/style.css
+++ b/style.css
@@ -656,7 +656,7 @@ justify-content: flex-start;
       width: 100%;
       right: 0px;
       background-size: cover;
-      position: relative;
+      position:fixed;
    }
 }
 @media(max-width:920px){
