--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ transform: translateX(100px);
    margin-left: 0px;
    background-image: url("images/myimage.jpg");
    background-size: cover;
+   box-shadow: 0 0 20px rgb(119, 116, 116),0 0 20px rgb(98, 98, 98);
 border-radius: 10px;
 z-index: 1;
 }
